--- a/configs/Venus.conf
+++ b/configs/Venus.conf
@@ -1,8 +1,8 @@
-# General Config
+# Device Info Configs
 TARGET_DEVICE_VENDOR="Lenovo"
 STATUS="UNSTABLE"
 
-# UEFI FD Config
-TARGET_FD_BASE="0x90000000"
-TARGET_FD_SIZE="0x00300000"
-TARGET_FD_BLOCKS="0x300"
+# UEFI FD Configs
+TARGET_FD_BASE="0x84000000"
+TARGET_FD_SIZE="0x00200000"
+TARGET_FD_BLOCKS="0x200"
